# gnucash-tickers

./: .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_finance.py  test_gnucash_wrapper.py
tickers/: __main__.py  commands.py  data.py  finance.py  gnucash_wrapper.py
